--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
       </div>
       <div class="header-actions">
-        <button id="btnExport" class="btn btn-secondary" disabled>Export JSON</button>
+        <button id="btnExport" class="btn btn-secondary" disabled>Exportar JSON</button>
       </div>
     </div>
   </header>
@@ -26,6 +26,7 @@
   <main class="container">
     <section class="card">
       <h2>Consulta</h2>
+
       <form id="searchForm" class="form-grid">
         <div class="field">
           <label for="origin">Origen</label>
@@ -52,7 +53,7 @@
         <div class="field">
           <label for="range_days">Rango ± días</label>
           <input id="range_days" name="range_days" type="number" min="0" max="30" step="1" value="7" required />
-          <div class="hint">Ej: 7 → busca ±7</div>
+          <div class="hint">Ej: 7 → busca ±7 días</div>
         </div>
 
         <div class="field">
@@ -65,7 +66,7 @@
         </div>
 
         <div class="field">
-          <label for="ranking_mode">Ranking mode</label>
+          <label for="ranking_mode">Modo de ranking</label>
           <select id="ranking_mode" name="ranking_mode">
             <option value="price">price</option>
             <option value="balanced">balanced</option>
@@ -73,18 +74,84 @@
           </select>
         </div>
 
+        <div class="field toggle">
+          <label class="checkbox">
+            <input id="enable_recommendations" name="enable_recommendations" type="checkbox" checked />
+            <span>Habilitar recomendaciones</span>
+          </label>
+          <div class="hint">Sugerir fechas fuera del rango</div>
+        </div>
+
+        <div class="field">
+          <label for="reco_horizon_days">Horizonte de recomendación (días)</label>
+          <input id="reco_horizon_days" name="reco_horizon_days" type="number" min="0" max="365" step="1" value="7" />
+        </div>
+
+        <div class="field">
+          <label for="reco_top_k">Top K recomendaciones</label>
+          <input id="reco_top_k" name="reco_top_k" type="number" min="1" max="50" step="1" value="15" />
+        </div>
+
+        <div class="field toggle">
+          <label class="checkbox">
+            <input id="enable_price_analysis" name="enable_price_analysis" type="checkbox" checked />
+            <span>Analizar precios</span>
+          </label>
+        </div>
+
+        <div class="field toggle">
+          <label class="checkbox">
+            <input id="enable_choice_prediction" name="enable_choice_prediction" type="checkbox" checked />
+            <span>Predicción de elección</span>
+          </label>
+        </div>
+
         <div class="actions">
           <button id="btnSubmit" class="btn btn-primary" type="submit">Buscar</button>
           <button id="btnReset" class="btn btn-secondary" type="button">Reset</button>
+
+          <div class="inline">
+            <label class="checkbox small">
+              <input id="use_timeout" type="checkbox" checked />
+              <span>Timeout</span>
+            </label>
+            <input id="timeout_ms" type="number" min="1000" max="180000" step="1000" value="120000" class="timeout-input" />
+            <span class="muted small">ms</span>
+          </div>
         </div>
       </form>
+
+      <div class="filters">
+        <div class="field">
+          <label for="filter_airline">Filtrar por aerolínea</label>
+          <select id="filter_airline">
+            <option value="">Todas</option>
+          </select>
+        </div>
+
+        <div class="field">
+          <label for="filter_max_stops">Escalas máximas</label>
+          <input id="filter_max_stops" type="number" min="0" max="6" step="1" value="2" />
+        </div>
+
+        <div class="field">
+          <label for="filter_max_duration">Duración máxima total (horas)</label>
+          <input id="filter_max_duration" type="number" min="1" max="60" step="1" value="40" />
+        </div>
+
+        <div class="actions">
+          <button id="btnApplyFilters" class="btn btn-secondary" type="button">Aplicar filtros</button>
+          <button id="btnClearFilters" class="btn btn-secondary" type="button">Limpiar filtros</button>
+        </div>
+      </div>
+
       <div id="statusBar" class="status-bar hidden"></div>
     </section>
 
     <section id="results" class="results hidden">
       <section class="card">
         <div class="card-header">
-          <h2>Executive summary</h2>
+          <h2>Resumen ejecutivo</h2>
           <div class="pill-row">
             <span id="pillBest" class="pill hidden"></span>
             <span id="pillRange" class="pill hidden"></span>
@@ -97,8 +164,9 @@
       <section class="card">
         <div class="card-header">
           <h2>Ranking</h2>
-          <div class="muted small">Click en headers para ordenar (↑↓)</div>
+          <div class="muted small">Click en encabezados para ordenar (↑↓)</div>
         </div>
+
         <div class="table-wrap">
           <table class="table" id="offersTable">
             <thead>
@@ -116,7 +184,8 @@
             <tbody></tbody>
           </table>
         </div>
-        <div id="offersEmpty" class="empty hidden">No se encontraron offers.</div>
+
+        <div id="offersEmpty" class="empty hidden">No se encontraron ofertas.</div>
       </section>
 
       <section class="card">
