--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/es.js"></script>
-  <script src="./autocomplete-airports.js"></script>
-  <script src="./app.js"></script>
+  <script src="/autocomplete-airports.js"></script>
+  <script src="/app.js"></script>
 </body>
 </html>
